# rust_training_material_inventyv

./: LICENSE  README.md
_10_error_handling/: README.md
_10_error_handling/_10_1_result/: Cargo.toml
_10_error_handling/_10_2_panic/: Cargo.toml
_10_error_handling/_10_3_custom_error_types/: Cargo.toml
_11_generic_types_traits_and_lifetimes/: README.md
_11_generic_types_traits_and_lifetimes/_11_1_generic_types/: Cargo.toml  README.md
_11_generic_types_traits_and_lifetimes/_11_2_traits/: Cargo.toml  README.md
_11_generic_types_traits_and_lifetimes/_11_3_lifetime/: Cargo.toml  README.md
_11_generic_types_traits_and_lifetimes/_11_4_closures/: Cargo.toml
_12_concurrency_threads/: README.md
_12_concurrency_threads/_12_1_arc/: Cargo.toml
_12_concurrency_threads/_12_2_message_passing/: Cargo.toml
_13_testing/_13_1_unit_testing/: Cargo.toml
_13_testing/_13_2_integration_testing/: Cargo.toml
_13_testing/_13_3_mocking/: Cargo.toml
_13_testing/_13_3_mocking/src/: main.rs
_13_testing/_13_4_property_based_testing/: Cargo.toml
_14_debugging/_14_1_rust_gdb/: Cargo.toml
_14_debugging/_14_2_rust_iidb/: Cargo.toml
_15_perfomance_and_profiling/_15_1_criterion_rs/: Cargo.toml
_16_http_server/_16_1_axum/: Cargo.toml  students.json
_18_rust_and_web_assembly/: README.md
_18_rust_and_web_assembly/_18_1_wasm_package/: Cargo.toml
_18_rust_and_web_assembly/_18_1_wasm_package/src/: lib.rs
_18_rust_and_web_assembly/_18_2_Web/: index.html  index.js
_1_getting_started/: README.md
_2_common_programming_concepts/: README.md
_4_serde_json/: README.md
(+108 files in other folders)
