[package]
name = "_18_1_wasm_package"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
getrandom = { version = "0.2", features = ["js"] }


[dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "HtmlElement", "Element", "Node"]
